# CppProperty

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
include/: property.h
src/: CMakeLists.txt  main.cpp
